[package]
name = "cod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
dropbox-sdk = "0.18.1"
google-drive = "0.7.0"
log = "0.4.21"
onedrive-api = "0.10.0"
rand = "0.8.5"
reqwest = "0.12.5"
rocksdb = "0.22.0"
serde = "1.0.203"
serde_yml = "0.0.10"
sha256 = "1.5.0"
tokio = { version = "1.38.0", features = ["full"] }
